# 4-color-memo

./: .gitignore  README.md  deno.json  index.html  package-lock.json  package.json  spec.md  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
