[package]
name = "four-color-text"
version = "0.1.1"
description = "4色ボールペン向けメモエディタ"
authors = ["Codex"]
edition = "2021"

[lib]
name = "four_color_text_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "4coloreditor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"
